...
      collectionView.register(MovieCell.self, forCellWithReuseIdentifier: MovieCell.identifier)
      collectionView.dataSource = self
      collectionView.delegate = self
      collectionView.backgroundColor = ColorHelper.customGray
      collectionView.showsVerticalScrollIndicator = true
      collectionView.indicatorStyle = .white
      collectionView.accessibilityIdentifier = "collection-view"
   }
}


//MARK: - UIScrollViewDelegate
extension MovieListView: UIScrollViewDelegate {
...
